<resources>
    <string name="app_name">IITJ Auth</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--Application specific strings-->
    <string name="initial_setup">Initial Setup</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="proceed">Proceed</string>
    <string name="about_app_desc">IITJ Auth lets you enjoy continuous internet connectivity without any further need to authenticate on Fortinet repeatedly.</string>
    <string name="dev_by">Developed by:- <b>Pratyaksh tyagi</b></string>
    <string name="let_s_get_social_with_the_dev">Let\'s get social ;)</string>
    <string name="coded_with_for_iitj">Coded with 🔥, 🧠 &amp; ❤️ for IITJ</string>
    <string name="linkedin_url">LinkedIn Url</string>
    <string name="twitter_url">Twitter Url</string>
    <string name="facebook_url">Facebook Url</string>
    <string name="instagram_url">Instagram Url</string>
    <string name="active">Active</string>
    <string name="status">Status:</string>
    <string name="inactive">Inactive</string>
    <string name="toggle_the_service_using_the_switch_above">Toggle the service using the switch above.</string>
    <string name="caution_message"><b>Quick Tips</b>\n• Feel free to close the app, the service will keep running.\n• For quick access add the app\'s tile to your quick settings!</string>
    <string name="click_to_open_battery_optimization_settings">CLICK TO OPEN POWER SETTINGS</string>
    <string name="service_killed_help_desc">Some of the OEMs might not allow the service to run all the time due to background computation restrictions by manufacturers, for instance you may white list the app from <b>Settings > Battery > Battery Optimization > \'Don\'t Optimize this app\'</b> \n\n OR\n</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="this_cannot_be_empty">This cannot be empty</string>
    <string name="personal_information">Personal Information</string>
    <string name="personal_info">Personal Info</string>
    <string name="github_url">GitHub Url</string>
    <string name="about">About</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="profile_preferences">Profile Preferences</string>
    <string name="profile_1">Fortinet Profile Details</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="rate_the_app_on_play_store">Rate the app on Play Store</string>
    <string name="having_problems">Having Problems?</string>
    <string name="service_getting_killed_randomly">Service getting killed randomly?</string>
    <string name="powered_by">powered by</string>
    <string name="evening_technologies">Evening Technologies</string>
    <string name="iitj_auth_logo">iitj_auth_logo</string>
    <string name="version">version</string>
    <string name="general">General</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="view_privacy_policy">View Privacy Policy</string>
    <string name="notification_info_text">Having trouble? Please read the troubleshooting section for more help!</string>
    <string name="click_here_to_find_out_how_to_turn_off_battery_optimization_on_your_device">Click here to find out, \'How to Turn off Battery Optimization on your device\'.</string>
    <string name="github_repository_link">GitHub Repository Link</string>
    <string name="source_code">Source code</string>
    <string name="setup_page_info">This data is securely stored encrypted on device.</string>
    <string name="feature2">2.<b> Extremely battery efficient: </b> Authentication only works actively when a wifi with captive portal (sign in page) is detected , also it cancels background work when not on IITJ network. </string>
    <string name="feature1">1. <b>Don\'t worry about mobile data:  </b> Can authenticate even with both cellular and wifi on.</string>
    <string name="feature3">3. <b>No need to even open the app: </b> Control the login service using QuickSettings Tile.</string>
    <string name="featuresHeading">Features:</string>
    <string name="features_title">Features</string>
    <string name="report_bugs_here">Report bugs here</string>

</resources>