<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/status"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/statusInfoActiveTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statusTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/active"
        android:textAllCaps="true"
        android:textColor="#64dd17"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/statusInfoInactiveTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statusTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/inactive"
        android:textAllCaps="true"
        android:textColor="#d50000"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <com.github.angads25.toggle.widget.LabeledSwitch
        android:id="@+id/serviceIconSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/switchInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/serviceIconSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/toggle_the_service_using_the_switch_above" />

    <TextView
        android:id="@+id/gotoBatterySettingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/switchInfoTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="4dp"
        android:text="@string/click_to_open_battery_optimization_settings"
        android:textColor="@color/accent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/caution_message"
        android:textAlignment="center" />


</RelativeLayout>